20240510-221327:词汇增加：接入。

--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -56359,7 +56359,7 @@ GTP	gtp
 揭	jkr
 接任	jkrj
 搅扰	jkrk
-挤入	jkrm
+接入	jkrm
 健康人群	jkrq
 健康人生	jkrs
 徼	jkrt
@@ -150455,6 +150455,7 @@ u̇	vpug
 信息化	xjxh
 休闲装	xjxi
 休闲	xjxj
+仙侠	xjxj
 修行	xjxk
 休闲裤	xjxk
 信心	xjxl
