20240512020224:词汇:词条清理到800条左右。

--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -165,10 +165,8 @@ ADP	adp
 遨	ag
 獒	aga
 獒	agak
-熬不过	agbg
 敖包	agbw
 熬出头	agct
-熬到头	agdt
 聱	agf
 聱	agfd
 熬粥	agib
@@ -177,9 +175,7 @@ ADP	adp
 爱国战线	agix
 爱国主义	agiy
 熬煎	agjm
-爱国精神	agjs
 爱岗敬业	agjy
-爱国力量	agll
 瑷	agma
 遨	agnn
 嶅	agoi
@@ -199,7 +195,6 @@ ADP	adp
 爱管闲事	agxs
 鏊	agy
 遨游	agyd
-爱国运动	agyd
 熬药	agye
 熬夜	agyh
 鏊	agyy
@@ -258,15 +253,12 @@ ADP	adp
 哀	ahwk
 哀婉	ahws
 癌细胞	ahxb
-爱好学习	ahxx
 鏖	ahy
-哀乐	ahy
-哀艳	ahyg
 哀怨	ahyw
+哀乐	ahyw
 鏖	ahyy
 哀哉	ahzf
 癌症	ahzh
-癌肿	ahzv
 鏖战	ahzy
 啊	ai
 唉	ai
@@ -370,7 +362,6 @@ ADP	adp
 按照	akir
 按件	akjj
 按揭	akjk
-按季	akjt
 按键	akjy
 挨剋	akkf
 拗口	akki
@@ -410,7 +401,6 @@ ADP	adp
 拗	akxz
 按要求	akyq
 按要求	akyu
-按章	akzh
 按住	akzj
 挨揍	akzk
 挨着	akzm
@@ -770,6 +760,7 @@ ADP	adp
 黯然	aorw
 盎司	aosb
 盎斯	aosf
+盎撒	aosk
 岸上	aosy
 岸滩	aotd
 凹透镜	aotj
@@ -128630,6 +128621,7 @@ QQ密码	qqmm
 甩锅	swgy
 生物合成	swhc
 涉外活动	swhd
+色环	swhg
 狮吼	swhi
 商务合作	swhi
 十万火急	swhj
@@ -150409,6 +150401,7 @@ u̇	vpug
 休学	xjxn
 肖像权	xjxq
 信息	xjxr
+休息	xjxr
 闲暇	xjxr
 休息日	xjxr
 信邪	xjxs
