20240512-121031:增加词条：杰瑞、蘸水。

--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -43682,6 +43682,7 @@ GTP	gtp
 蕞	ier
 蕞	ierf
 著述	iesc
+蘸水	iesd
 蒸熟	iesh
 罪恶深重	iesi
 葬送	iesm
@@ -52928,6 +52929,7 @@ GTP	gtp
 桕	jcr
 极弱	jcrb
 桕	jcrd
+杰瑞	jcrg
 劫持人质	jcri
 极热	jcrk
 酒池肉林	jcrl
@@ -166108,6 +166110,7 @@ u̇	vpug
 蕞	zer
 蕞	zerf
 著述	zesc
+蘸水	zesd
 蒸熟	zesh
 葬送	zesm
 葬身	zesr
