20240512-142847:补充词条：航天，补拍

--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -5243,7 +5243,6 @@ bilibili	blbl
 勃拉姆斯	blms
 被膜	blmv
 遍	bln
-被你	blnj
 必能	blnl
 诐	blnl
 遍	blnn
@@ -5251,22 +5250,19 @@ bilibili	blbl
 被虐	blny
 波利尼西亚	blny
 扁	blo
-被殴打	blod
 扁	bloi
 扁平化	blp
 扁平足	blp
-被拍卖	blp
 濒临破产	blpc
 补票	blpf
 扁平	blph
 扁平化	blph
 补品	blpi
 扁平足	blpi
+补拍	blpk
 被判	blpm
-被拍卖	blpm
 被迫	blpr
 步履蹒跚	blps
-被评为	blpw
 被骗	blpx
 扁平疣	blpy
 扁平足	blpz
@@ -40529,6 +40525,7 @@ GTP	gtp
 后退	hqtb
 航天部	hqtb
 后天	hqtg
+航天	hqtg
 后庭	hqth
 航天局	hqtj
 后推	hqtk
@@ -49947,6 +49944,7 @@ GTP	gtp
 造就	itjh
 制剂	itjh
 造价	itjj
+造假	itjj
 雉鸡	itjl
 专题节目	itjm
 知觉	itjn
@@ -172168,6 +172166,7 @@ u̇	vpug
 造就	ztjh
 制剂	ztjh
 造价	ztjj
+造假	ztjj
 雉鸡	ztjl
 专题节目	ztjm
 知觉	ztjn
