20240513-042021:用rsync脚本同步一次.

--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -38979,7 +38979,7 @@ GTP	gtp
 换货	hkhj
 护航舰	hkhj
 攉	hkhj
-换换	hkhk
+换行	hkhk
 行话	hkhl
 花开花落	hkhl
 很火	hkhm
@@ -111931,6 +111931,7 @@ NFC	nfc
 娶	qfss
 求生	qfst
 取胜	qfsv
+取色	qfsw
 取书	qfsx
 其上	qfsy
 秋风扫落叶	qfsy
@@ -128573,6 +128574,7 @@ QQ密码	qqmm
 删词	swcl
 事务处理	swcl
 色彩	swcm
+色差	swcm
 三五成群	swcq
 鲺	swcr
 煞车	swcs
