20240513-153221:➕词：年少有为、很早、大户、小鹤；+文件：rsync_rine.sh.

--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -16008,6 +16008,7 @@ bilibili	blbl
 大喊	dahi
 大会	dahj
 大伙	dahj
+大户	dahl
 大话	dahl
 大火	dahm
 大寒	dahn
@@ -18641,6 +18642,7 @@ bilibili	blbl
 倒台	djtl
 低糖	djtm
 低头	djtn
+倒贴	djto
 党团	djto
 代替品	djtp
 独具特色	djts
@@ -38996,6 +38998,7 @@ GTP	gtp
 护着	hkim
 很窄	hkin
 护罩	hkio
+很早	hkir
 护照	hkir
 行长	hkit
 换走	hkiu
@@ -39194,6 +39197,7 @@ GTP	gtp
 护着	hkzm
 很窄	hkzn
 护罩	hkzo
+很早	hkzr
 护照	hkzr
 行长	hkzt
 换走	hkzu
@@ -79764,6 +79768,7 @@ NFC	nfc
 女婴	nsyo
 女妖	nsys
 奶业	nsyu
+年少有为	nsyw
 女用	nsyw
 那是因为	nsyw
 女士优先	nsyx
@@ -152120,6 +152125,7 @@ u̇	vpug
 小孩子	xphi
 小伙	xphj
 小户	xphl
+小鹤	xphl
 小火	xphm
 小红帽	xphm
 小寒	xphn
