20240513-164938:➕词：古国、语气。

--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -30645,6 +30645,7 @@ GDP	gdp
 过关	gfgm
 故宫	gfgn
 巩固	gfgo
+古国	gfgo
 鞲	gfgo
 贡嘎山	gfgs
 股份公司	gfgs
@@ -33010,6 +33011,7 @@ GIS	gis
 盖棺	gmgc
 革命根据地	gmgd
 公共	gmgf
+谷歌	gmgf
 公干	gmgg
 国民革命军	gmgj
 公共课	gmgk
@@ -160195,6 +160197,7 @@ u̇	vpug
 意乱情迷	ylqm
 冤情	ylqn
 勇气	ylqt
+语气	ylqt
 又去	ylqu
 医疗器械	ylqx
 一落千丈	ylqz
