--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -55616,6 +55616,7 @@ GTP	gtp
 仅只	jjii
 介	jjii
 价值	jjij
+假正经	jjij
 焦作	jjij
 仅指	jjik
 假证	jjil
@@ -78559,6 +78560,7 @@ NFC	nfc
 能被	nlbl
 努力避免	nlbm
 能不能	nlbn
+难办	nlbn
 能力薄弱	nlbr
 能比	nlbs
 南流北淌	nlbt
@@ -164387,6 +164389,7 @@ u̇	vpug
 一言蔽之	yybi
 犹豫不决	yybj
 源源不绝	yybj
+油盐不进	yybj
 龈	yybk
 营养不良	yybl
 郁郁不乐	yybl
