20240514-030708:更新同步脚本。

--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -27186,8 +27186,10 @@ bilibili	blbl
 蚄	fohe
 贩黄	fohf
 峰会	fohj
-赋值	foi
+峰值	foij
+赋值	foij
 罚站	foih
+赋值	foij
 峰值	foij
 罚则	foio
 贩子	foiv
@@ -111329,6 +111331,7 @@ NFC	nfc
 取得贷款	qddk
 强大动力	qddl
 渠道	qddm
+清单	qddm
 潜到	qdds
 汽笛	qddt
 青岛大学	qddx
