20240514-031214:脚本增加一个进度参数。

--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -111335,7 +111335,7 @@ NFC	nfc
 潜到	qdds
 汽笛	qddt
 青岛大学	qddx
-穷得叮当三响	qddx
+穷得叮当响	qddx
 清点	qddy
 淇	qdf
 气得发抖	qdfd
@@ -115264,6 +115264,7 @@ QQ密码	qqmm
 秋冬季	qtdj
 缺德	qtdk
 签订	qtdl
+气抖冷	qtdl
 抢滩登陆	qtdl
 签单	qtdm
 签定	qtdn
