20240515-160733:增加几个小狼毫配色方案。

--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -45682,7 +45682,6 @@ GTP	gtp
 遵章守纪	iisj
 嘴损	iisk
 咋说	iisl
-足三里	iisl
 政治势力	iisl
 郑重声明	iism
 只受	iism
@@ -124801,6 +124800,7 @@ QQ密码	qqmm
 首都	smdf
 什么地方	smdf
 杀毒	smdg
+煽动	smdg
 首度	smdh
 兽	smdi
 声名大噪	smdi
