--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -7764,6 +7764,7 @@ bilibili	blbl
 饱学之士	bxis
 不肖子孙	bxis
 编造	bxit
+编制	bxit
 编址	bxiu
 驳杂	bxiw
 编织物	bxiw
@@ -20071,7 +20072,7 @@ bilibili	blbl
 炖汤	dmtd
 都没听过	dmtg
 单体	dmtj
-递推	dmtk
+单挑	dmtk
 灯台	dmtl
 单糖	dmtm
 灯头	dmtn
@@ -27018,6 +27019,7 @@ bilibili	blbl
 发射机	fnsj
 发誓	fnsk
 发生率	fnsl
+发送	fnsm
 发烧	fnsm
 发生器	fnsq
 发射	fnsr
@@ -48179,7 +48181,7 @@ GTP	gtp
 中坚	ioju
 中纪委	iojw
 中级	iojx
-中继线	iojx
+中继	iojx
 睁开眼	iok
 中科院	iok
 中科大	iokd
@@ -76109,6 +76111,7 @@ GTP	gtp
 朦	mveg
 脉浮紧	mvfj
 眉峰	mvfo
+孟菲斯	mvfs
 眉弓	mvgb
 脉管	mvgt
 脉管炎	mvgy
@@ -111432,8 +111435,9 @@ NFC	nfc
 浅蓝	qdle
 清理	qdlg
 潜力股	qdlg
-清零	qdlh
 清凉	qdlh
+清廉	qdlh
+清零	qdlh
 强盗逻辑	qdlj
 汽轮机	qdlj
 沁	qdlk
@@ -142739,6 +142743,7 @@ u̇	vpug
 未改	wggb
 无根	wggc
 无辜	wggf
+武功	wggf
 违规	wggg
 玮	wggi
 王公贵族	wggi
@@ -152141,7 +152146,7 @@ u̇	vpug
 小户型	xphx
 小伙子	xphz
 小孩子	xphz
-小众	xpi
+小住	xpi
 小字辈	xpi
 小卒	xpi
 小张	xpib
@@ -152149,10 +152154,11 @@ u̇	vpug
 小札	xpic
 小酌	xpif
 小资	xpih
+小卒	xpih
 小组会	xpih
 小嘴	xpii
 小组长	xpii
-小住	xpij
+小众	xpij
 小指	xpik
 小灶	xpim
 小字	xpin
@@ -170408,7 +170414,7 @@ u̇	vpug
 中坚	zoju
 中纪委	zojw
 中级	zojx
-中继线	zojx
+中继	zojx
 中继站	zojz
 中奖者	zojz
 睁开眼	zok
