--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -23777,6 +23777,7 @@ bilibili	blbl
 额济纳旗	ejnu
 俄顷	ejqs
 二级企业	ejqy
+二甲双胍	ejsg
 俄式	ejss
 俄	ejt
 俄	ejtk
@@ -24414,7 +24415,6 @@ bilibili	blbl
 房产中介	fcij
 覆巢之下安有完卵	fcil
 非常重视	fcis
-服从整体	fcit
 非池中物	fciw
 逢场作戏	fcix
 父慈子孝	fcix
@@ -33810,6 +33810,7 @@ GIS	gis
 刚巧	goqf
 国球	goqg
 国庆	goqh
+国旗	goqh
 国企	goqj
 国庆节	goqj
 岗前	goqm
@@ -77744,6 +77745,7 @@ NFC	nfc
 南沙	nfsd
 南宋	nfsn
 南山	nfso
+诺氟沙星	nfsx
 南天	nftg
 南唐	nfth
 南投	nftk
@@ -114109,6 +114111,7 @@ NFC	nfc
 擒拿格斗	qngd
 情歌	qngf
 全年工作	qngi
+情关	qngm
 寝宫	qngn
 穷国	qngo
 穷鬼	qngr
@@ -127944,7 +127947,7 @@ QQ密码	qqmm
 剩下	stxf
 私刑	stxg
 生效	stxh
-适新	stxh
+升序	stxh
 失效	stxh
 私信	stxj
 稍许	stxl
@@ -152279,6 +152282,7 @@ u̇	vpug
 小强	xpqb
 小桥	xpqc
 小汽车	xpqc
+小企鹅	xpqe
 小巧	xpqf
 小前锋	xpqf
 小球	xpqg
@@ -152352,6 +152356,7 @@ u̇	vpug
 小强	xpub
 小桥	xpuc
 小汽车	xpuc
+小企鹅	xpue
 小巧	xpuf
 小前锋	xpuf
 小球	xpug
