--- a/rime/weasel.custom.yaml
+++ b/rime/weasel.custom.yaml
@@ -484,3 +484,28 @@ patch:
       label_font_point: 12
       text_color: 0x424242
 
+    ruoleaf:
+      name: 箬叶leaf
+      author: knat
+      back_color: 0xC6C89E
+      shadow_color: 0x615B2900
+      border_color: 0x615B29
+      text_color: 0x615B29
+      hilited_text_color: 0x615B29
+      hilited_back_color: 0xC6C89E
+      hilited_shadow_color: 0x00000000
+      hilited_mark_color: 0x615B29
+      hilited_label_color: 0xFFFFFF
+      hilited_candidate_text_color: 0xFFFFFF
+      hilited_comment_text_color: 0xFFFFFF
+      hilited_candidate_back_color: 0x615B29
+      hilited_candidate_border_color: 0x00000000
+      hilited_candidate_shadow_color: 0x615B2900
+      label_color: 0x615B29
+      candidate_text_color: 0x615B29
+      comment_text_color: 0x615B29
+      candidate_back_color: 0x00000000
+      candidate_border_color: 0x00000000
+      candidate_shadow_color: 0x00000000
+      prevpage_color: 0x615B2900
+      nextpage_color: 0x615B2900
