20240521-143057：词条：辩护调序。

--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -2979,21 +2979,21 @@ ATP	atp
 北回归线	bhgx
 冰镐	bhgy
 瘢痕	bhh
-庇护	bhh
+疤痕	bhh
 辩护	bhh
 变厚	bhha
 冰红茶	bhhc
 冰河	bhhd
 冰花	bhhe
 疤痕	bhhh
+瘢痕	bhhh
 病号	bhhi
 变化	bhhj
-保护环境	bhhj
 变换	bhhk
-不会回来	bhhl
+辩护	bhhk
+庇护	bhhk
 冰火	bhhm
 病害	bhhn
-不会很难	bhhn
 病患	bhho
 病后	bhhq
 辩护权	bhhq
@@ -3005,7 +3005,6 @@ ATP	atp
 变幻	bhhx
 不怀好意	bhhy
 病症	bhi
-变质岩	bhi
 雹子	bhi
 冰粥	bhib
 冰柱	bhic
@@ -37569,6 +37568,7 @@ GTP	gtp
 合家欢乐	hjhl
 合欢	hjhl
 辉煌	hjhm
+合乎	hjhm
 含恨	hjhn
 何患	hjho
 会后	hjhq
@@ -39295,8 +39295,8 @@ GTP	gtp
 回销	hoxy
 黑匣子	hoxz
 回形针	hoxz
-回音	hoy
-回应	hoy
+回音	hoyh
+回应	hoyh
 黑压压	hoy
 患有	hoya
 回音壁	hoyb
@@ -67462,7 +67462,7 @@ GTP	gtp
 拉锯战	lkjz
 律考	lkkf
 拉开	lkkg
-拉康	lkkh
+拉跨	lkki
 拉客	lkkn
 拉胯	lkkv
 捩	lkl
