--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -6322,8 +6322,6 @@ bilibili	blbl
 伴随症状	bszz
 笔	bt
 笨	bt
-不太安全	btaq
-不太安全	btau
 拜把子	btb
 笨办法	btbf
 拜别	btbi
@@ -6363,7 +6361,6 @@ bilibili	blbl
 百团大战	btdz
 半途而废	btef
 笨	btf
-不太方便	btfb
 笔法	btfd
 拜佛	btfj
 拜访	btfl
@@ -6382,14 +6379,12 @@ bilibili	blbl
 笔杆子	btgi
 笔供	btgj
 秉公	btgm
-不太公平	btgp
 拜高堂	btgt
 巴塔哥尼亚	btgy
 笔杆子	btgz
 笔会	bth
 笔画	bthd
 拜会	bthj
-不太好看	bthk
 冰糖葫芦	bthl
 拜贺	bthn
 笔划	bths
@@ -6407,11 +6402,9 @@ bilibili	blbl
 笨猪	btiw
 笔战	btiy
 笔记本	btjb
-不太记得	btjd
 补贴金额	btje
 笔迹	btjh
 本台记者	btji
-不太健康	btjk
 笔记	btjl
 笔架	btjn
 拜见	btjo
@@ -6446,7 +6439,6 @@ bilibili	blbl
 笔墨	btmo
 悲天悯人	btmr
 笔名	btmw
-不太明显	btmx
 笾	btn
 笾	btnn
 拜年	btnt
@@ -6467,7 +6459,6 @@ bilibili	blbl
 不通人情	btrq
 篦	btrs
 不通人情	btru
-不太容易	btry
 秕	bts
 笔刷	btsb
 抱头鼠窜	btsc
@@ -6508,10 +6499,8 @@ bilibili	blbl
 笔芯	btxe
 笔下	btxf
 笔形	btxg
-不太喜欢	btxh
 白头偕老	btxl
 秉性	btxn
-不太现实	btxs
 波涛汹涌	btxy
 笔友	btya
 不同一般	btyb
@@ -6520,7 +6509,6 @@ bilibili	blbl
 不同意见	btyj
 笔译	btyl
 补天浴日	btyr
-不太一样	btyy
 笾	btz
 笔者	btz
 不同之处	btzc
@@ -8253,7 +8241,6 @@ bilibili	blbl
 喘不上来气	cbsu
 成百上千	cbsu
 赤膊上阵	cbsz
-差不太多	cbtd
 初步确定	cbud
 弛	cbv
 弛	cbvc
@@ -22538,6 +22525,7 @@ bilibili	blbl
 遏制犯罪	eifi
 遏制房价	eifj
 噁	eifl
+嗯哼	eihi
 鄂州	eiim
 鄂伦春	eilc
 嗯呐呗	einb
@@ -27194,11 +27182,11 @@ bilibili	blbl
 风趣	fwqu
 凤栖梧	fwqw
 饭钱	fwqy
-凡人	fwr
+犯人	fwr
 访问人次	fwrc
 凡人歌	fwrg
 风热证	fwri
-犯人	fwrj
+凡人	fwrj
 繁文缛节	fwrj
 风热	fwrk
 方为人上人	fwrr
@@ -50004,10 +49992,8 @@ GTP	gtp
 金榜题名	jbtm
 尽头	jbtn
 剧团	jbto
-记不太清	jbtq
 剧透	jbtt
 疆土	jbtu
-记不太清	jbtu
 基本特征	jbtz
 剧	jbu
 剧情	jbu
@@ -59054,7 +59040,6 @@ GTP	gtp
 可不是嘛	kbsm
 看不顺眼	kbsy
 恳谈会	kbt
-可不太好	kbth
 恳谈会	kbth
 恳谈	kbtl
 垦	kbu
@@ -125483,7 +125468,6 @@ QQ密码	qqmm
 退税	tbst
 退色	tbsw
 退缩	tbsx
-听不太懂	tbtd
 退堂鼓	tbtg
 退庭	tbth
 弹跳	tbti
