--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -30119,7 +30119,7 @@ GDP	gdp
 高碳钢	ghtg
 高堂	ghtj
 高挑	ghtk
-高谈	ghtl
+高通	ghtl
 高糖	ghtm
 庚帖	ghto
 关怀体贴	ghtt
@@ -122844,6 +122844,7 @@ QQ密码	qqmm
 生孩子	sthi
 生还者	sthi
 适合	sthj
+私货	sthj
 生态环境	sthj
 失衡	sthk
 伤天害理	sthl
