--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -16259,6 +16259,7 @@ bilibili	blbl
 戴花	dfhe
 丁亥	dfhh
 洞房花烛	dfhi
+带货	dfhj
 都会	dfhj
 都很	dfhk
 带话	dfhl
@@ -29077,7 +29078,7 @@ GDP	gdp
 辜	gfh
 工会	gfh
 古惑仔	gfh
-过活	gfhd
+过河	gfhd
 共和党	gfhd
 辜	gfhf
 功耗	gfhg
@@ -31692,6 +31693,7 @@ GIS	gis
 戤	gns
 怪石	gnsa
 官司	gnsb
+工农商学兵	gnsb
 怪事	gnsf
 官商	gnsh
 国内生产总值	gnsi
@@ -55937,6 +55939,7 @@ GTP	gtp
 巨蟒	jsmo
 车马炮	jsmp
 姐妹	jsms
+娇媚	jsms
 较明显	jsmx
 技术密集型	jsmx
 就是没有	jsmy
@@ -120627,6 +120630,7 @@ QQ密码	qqmm
 十年规划	sngh
 守寡	sngn
 赛果	sngo
+士农工商	sngs
 审稿	sngt
 塞给	sngx
 窣	snh
@@ -123273,8 +123277,6 @@ QQ密码	qqmm
 孀妻弱子	suri
 士人	surj
 埏	surl
-申请日期	surq
-申请日期	suru
 身轻如燕	sury
 孀妻弱子	surz
 肾上腺	sus
@@ -123282,6 +123284,7 @@ QQ密码	qqmm
 肾石	susa
 石器时代	susd
 声速	susf
+声索	susf
 肾衰	sush
 神气十足	susi
 孰轻孰重	susi
@@ -127275,10 +127278,10 @@ QQ密码	qqmm
 提高班	tkgb
 抬杠	tkgc
 提灌	tkgd
-提高到	tkgd
 提过	tkgf
 提干	tkgg
 提供给	tkgg
+推广	tkgh
 提高	tkgh
 提供者	tkgi
 提供	tkgj
@@ -141972,6 +141975,7 @@ u̇	vpug
 相映	xcyr
 校医	xcys
 行成于思	xcys
+相与	xcys
 想用	xcyw
 校园网	xcyw
 相约	xcyx
