20240525-022033：发家、发迹、中道崩殂

--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -25466,12 +25466,14 @@ bilibili	blbl
 发酵	fnjf
 飞进	fnjg
 发奖	fnjh
+发迹	fnjh
 发件	fnjj
 发掘	fnjk
 飞机库	fnjk
 妇女健康	fnjk
 发卷	fnjm
 发觉	fnjn
+发家	fnjn
 富甲	fnjo
 飞机票	fnjp
 发件人	fnjr
@@ -41031,6 +41033,7 @@ GTP	gtp
 躁动不安	idba
 诸多不便	idbb
 治标	idbc
+中道崩殂	idbc
 知道不知道	idbd
 淄博	idbf
 治病	idbh
@@ -159008,6 +159011,7 @@ u̇	vpug
 躁动不安	zdba
 诸多不便	zdbb
 治标	zdbc
+中道崩殂	zdbc
 知道不知道	zdbd
 淄博	zdbf
 治病	zdbh
