--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -25413,7 +25413,6 @@ bilibili	blbl
 发给	fngx
 发工资	fngz
 发狠	fnh
-飞蝗	fnh
 发黑	fnh
 发还	fnha
 发汗	fnhd
@@ -25427,9 +25426,10 @@ bilibili	blbl
 发火	fnhm
 愤恨	fnhn
 飞回	fnho
+飞蝗	fnho
 发货票	fnhp
 飞航	fnhq
-发好	fnhs
+飞蝗石	fnhs
 发函	fnhv
 发昏	fnhw
 发红	fnhx
@@ -27209,7 +27209,6 @@ bilibili	blbl
 风蚀	fwsw
 风骚	fwsx
 福无双至，祸不单行	fwsx
-风湿性	fwsx
 犯上	fwsy
 福无双至	fwsz
 鳆	fwt
@@ -27257,6 +27256,7 @@ bilibili	blbl
 风信子	fwxi
 访问学者	fwxi
 风行	fwxk
+凡心	fwxl
 负心	fwxl
 凤翔	fwxm
 负性	fwxn
@@ -30871,6 +30871,7 @@ GIS	gis
 括	gkt
 括	gkti
 搞通	gktl
+搞头	gktn
 挂图	gkto
 顾客投诉	gkts
 挂毯	gktt
@@ -34773,6 +34774,7 @@ GTP	gtp
 滑轮组	hdli
 海蛎煎	hdlj
 海陆空	hdlk
+滑溜溜	hdll
 翮	hdll
 活到老，学到老	hdll
 洪炉	hdlm
@@ -53814,6 +53816,7 @@ GTP	gtp
 军法	jlf
 讲法	jlf
 计费	jlfb
+军费	jlfb
 记分册	jlfc
 谨	jlfd
 加利福尼亚半岛	jlfd
@@ -83986,6 +83989,7 @@ NFC	nfc
 瑳	ogmf
 叆	ogmg
 琷	ogmg
+㼆	ogmg
 珜	ogmg
 瑗	ogmg
 班	ogmg
@@ -119292,10 +119296,10 @@ QQ密码	qqmm
 双倍	slb
 圣保罗	slb
 双臂	slbb
-圣杯	slbc
-设备厂	slbc
+双标	slbc
 说不出	slbc
 祀	slbc
+圣杯	slbc
 说不定	slbd
 四六不懂	slbd
 双鬓	slbf
@@ -153572,6 +153576,7 @@ u̇	vpug
 以至于	yliy
 谕	ylj
 语句	ylj
+以及	ylj
 谒见	ylj
 豫剧	yljb
 预检	yljc
@@ -153601,6 +153606,7 @@ u̇	vpug
 语境	ylju
 谕	yljv
 褕	yljv
+以及	yljw
 永久	yljw
 语句	yljw
 预缴	yljx
