--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -83720,6 +83720,7 @@ NFC	nfc
 鬹	ogdi
 琺	ogdu
 璍	ogeg
+𬎆	ogeg
 瓘	ogei
 耯	ogej
 瑹	ogej
@@ -142054,6 +142055,7 @@ u̇	vpug
 洗掉	xddk
 洗涤灵	xddl
 西电东送	xdds
+洗地	xddu
 泻肚	xddv
 消毒液	xddy
 笑掉大牙	xddy
@@ -151472,6 +151474,7 @@ u̇	vpug
 鱼贯而出	ygec
 伊格尔顿	yged
 有感而发	ygef
+𬎆	ygeg
 一干二净	ygej
 一概而论	ygel
 瑛	ygeo
