--- a/rime/weasel.custom.yaml
+++ b/rime/weasel.custom.yaml
@@ -515,3 +515,29 @@ patch:
       candidate_shadow_color: 0x00000000
       prevpage_color: 0x615B2900
       nextpage_color: 0x615B2900
+
+    morningBlue:
+      name: 晨曦·深蓝
+      author: knat
+      back_color: 0x4B2618
+      shadow_color: 0x36000000
+      border_color: 0x4B2618
+      text_color: 0xF9D78D
+      hilited_text_color: 0xCBA078
+      hilited_back_color: 0x4B2618
+      hilited_shadow_color: 0x00000000
+      hilited_mark_color: 0x00CBA078
+      hilited_label_color: 0x4B2618
+      hilited_candidate_text_color: 0x4B2618
+      hilited_comment_text_color: 0x4B2618
+      hilited_candidate_back_color: 0xF9D78D
+      hilited_candidate_border_color: 0xF9D78D
+      hilited_candidate_shadow_color: 0xAB000000
+      label_color: 0xF9CA97
+      candidate_text_color: 0xF9CA97
+      comment_text_color: 0xCBA078
+      candidate_back_color: 0x4B2618
+      candidate_border_color: 0x00000000
+      candidate_shadow_color: 0x00000000
+      prevpage_color: 0xF9D78D
+      nextpage_color: 0xF9D78D
